--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -11,16 +11,19 @@
     width: 200%;
     display: flex;
     flex-wrap: nowrap;
-    background: repeating-linear-gradient(90deg, #009FFD, #53a7d8 25%,#009FFD 50%);
-    & > div {
-        width: 50%; /* Div now has 50% of 200% so it has 100% width */
+    background: repeating-linear-gradient(90deg, #009FFD, #53a7d8 25%, #009FFD 50%);
+
+    &>div {
+        width: 50%;
+        /* Div now has 50% of 200% so it has 100% width */
         height: 200vh;
         display: flex;
         flex-direction: column;
         align-items: center;
     }
 
-    & #loginForm > div, & #registerForm > div {
+    & #loginForm>div,
+    & #registerForm>div {
         width: 100%;
     }
 
@@ -63,12 +66,12 @@
     & .formButton {
         min-height: 4vh;
         width: 80%;
-        background: linear-gradient(90deg, rgb(0,0,128), rgb(0,0,196));
+        background: linear-gradient(90deg, rgb(0, 0, 128), rgb(0, 0, 196));
         border-radius: 12.5px;
         font-weight: bolder;
 
         &:hover {
-            box-shadow: 0 0 8px 8px rgba(255,255,255, .2);
+            box-shadow: 0 0 8px 8px rgba(255, 255, 255, .2);
         }
     }
 
@@ -80,24 +83,26 @@
     & a {
         text-decoration: none;
         color: pink;
+
         &:hover {
             color: pink;
             text-shadow: 0 0 5px white;
-        } 
+        }
     }
 }
 
 /*
 * Styling login and register form
 */
-#loginForm, #registerForm {
+#loginForm,
+#registerForm {
     & .was-validated .form-control:is(:invalid, :valid) {
         border-width: 3px;
     }
 
     & .invalid-feedback {
         color: red;
-        text-shadow: 0 0 10px white ;
+        text-shadow: 0 0 10px white;
     }
 
     & .hidden {
@@ -124,18 +129,33 @@
         justify-content: center;
         color: white;
 
-        & > :first-child {
-            margin: 10px;
+        & .form-check-input {
+            position: relative;
+            border: 1px solid pink;
+            margin: 5px;
+
+            &:hover {
+                box-shadow: 0 0 10px 10px rgba(255, 255, 255, 0.25);
+            }
+
+            &:focus:not(:hover) {
+                box-shadow: none;
+            }
+
+            &:checked {
+                background-color: pink;
+            }
         }
     }
 }
+
 /**
   * Css related to the agreement section
   */
 
 #agreement {
 
-    & > div {
+    &>div {
         width: 60%;
         text-align: center;
         display: flex;
